# Team06-SEAME-DES_Instrument-Cluster

./: Bservo.hpp  FServo.hpp  Motors  Motors.cpp  Motors.hpp  QtInstallation.md  main.cpp
.github/workflows/: cicd.yml
ClusterDisplay/: BatteryIconObj.cpp  BatteryIconObj.hpp  CMakeLists.txt  Main.qml  SimpleBar.qml  Speedometer.qml  SpeedometerObj.cpp  SpeedometerObj.hpp  TestBattery.cpp  main.cpp
ClusterDisplay5/ClusterDisplay/: CMakeLists.txt  TestBattery.cpp  TestSpeedSensor.cpp  main.cpp  main.qml
ClusterDisplay5/ClusterDisplay/inc/: TestBattery.hpp
ClusterDisplay5/build-ClusterDisplay-Desktop-Default/: CMakeCache.txt  ClusterDisplay  ClusterDisplay.cbp  Makefile  cmake_install.cmake
ClusterDisplay5/build-ClusterDisplay-Desktop-Default/ClusterDisplay_autogen/: moc_predefs.h  mocs_compilation.cpp
ClusterDisplay5/build-ClusterDisplay-Desktop-Default/ClusterDisplay_autogen/DIG64O274K/: moc_TestBattery.cpp
ClusterDisplay5/build-ClusterDisplay-Desktop-Default/ClusterDisplay_autogen/EWIEGA46WW/: moc_TestBattery.cpp  qrc_qml.cpp
VSS/: Vehicle.vspec  quantities.yaml  units.yaml
VSS/api_cpp/: Speed.module.yaml  Speed.solution.yaml
VSS/api_cpp/cppservice/: CMakeLists.txt
VSS/api_cpp/cppservice/modules/speed/: CMakeLists.txt  SpeedConfig.cmake.in
VSS/api_cpp/cppservice/modules/speed/implementation/: CMakeLists.txt
VSS/api_cpp/cppservice/scripts/: test_cmake.sh
jetCar/: BackMotors.cpp  BackMotors.hpp  FServo.cpp  FServo.hpp  Motors.cpp  Motors.hpp  a.out  main.cpp
nano/nano/: speed_pi.py
